Theming: UI enhancements for OffCanvasCart (work in progress)

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_cart.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_cart.scss
@@ -1,111 +1,112 @@
 /// <reference path="bs4/scss/bootstrap.scss" />
-
-/* BEGIN: flex-box */
-#offcanvas-cart .tab-pane {
-    margin-top: 0 !important;
-    margin-bottom: 0 !important;   
-    padding: 0;
-    flex-direction: column;
-    display: flex !important;
-    position: absolute;
-    bottom: 0;
-    top: 100px;
-    width: 100%;
-    z-index: 1000;
-    visibility: hidden;
-}
-#offcanvas-cart .tab-pane.active {
-    z-index: 1001;
-    visibility: visible;
-}
-#offcanvas-cart .offcanvas-cart-body {
-    max-height: none;
-    overflow-y: auto;
-    overflow-x: hidden;
-    display: flex; 
-    flex-direction: column;
-    flex: 1;
-    justify-content: flex-start;
-    align-items: stretch;
-    align-content: stretch;
-    position: relative;
-	min-height: 50px;
-}
-#offcanvas-cart .offcanvas-cart-body .items {
-    height: 100%;
-    min-height: 100%;
-    flex: 1;
-}   
-/* END: flex-box */
-
-/* BEGIN: tabs */
 #offcanvas-cart {
-    
-    .nav-tabs {
-        display: flex;
-        flex-direction: row;
-    }
-        
-    .nav-item {
-        flex-grow: 1;
-        width: 33%;
-        white-space: nowrap;
-        span.title {
-            max-width: 90%;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: inline-block;
-            line-height: 1.6rem;
+    .offcanvas-cart-header {
+        position: relative;
+        background: #f7f7f7;
+        height: 100px;
+
+        .nav-tabs {
+            display: flex;
+            flex-direction: row;
         }
-        span.label {
-            vertical-align: super;
-            @include media-breakpoint-down(sm) {
-                margin-left: -1.5rem;
-                vertical-align: top;
+
+        .nav-item {
+            display: block;
+            flex-basis: 0;
+            flex-grow: 1;
+            flex-wrap: nowrap;
+            width: 100%;
+            max-width: 100%;
+            min-height: 1px;
+            //white-space: nowrap;
+
+            .nav-link {
+                background: transparent !important;
+                max-width: 100%;
+            }
+
+            span.title {
+                display: inline-block;
+                max-width: 90%;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: inline-block;
+                line-height: 1.6rem;
+            }
+
+            span.label {
+                vertical-align: super;
+                @include media-breakpoint-down(sm) {
+                    margin-left: -1.5rem;
+                    vertical-align: top;
+                }
+            }
+            i {
+                font-size: 2.5rem;
             }
         }
-        i {
-            font-size: 2.5rem;
-        }
     }
 
-    .nav-item + .nav-item {
-        margin-left: 0;
+    .tab-content {
+        position: absolute;
+        left: 0;
+        top: 100px;
+        right: 0;
+        bottom: 0;
     }
 
-    .nav-item {
+    .tab-pane {
+        padding: 0;
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        > * { width: 100%; z-index: 1; }
+    }
+
+    .offcanvas-cart-body {
         position: relative;
+        flex-grow: 1;
+        overflow-y: auto;
+        overflow-x: hidden;
+	    min-height: 100px;
+        line-height: 1.5;
     }
 
-    .nav-link {
-        position: relative;
-        background-color: transparent;
+    .offcanvas-cart-buttons {
+        padding: 1rem;
     }
 }
-/* END: tabs */
 
+.offcanvas-cart-items {
+    padding: 0.5rem 0;
+}
 
-.offcanvas-cart-header {
-    background: #f7f7f7;
-    position: relative;
-    height: 100px;
-    .nav-tabs {
-        position: absolute;
-        bottom: 0;
-        max-width: 100%;
-        width: 100%;
-    }
+.offcanvas-cart-item {
+    border-bottom: 1px solid rgba(#000, 0.15);
+    padding: $grid-gutter-width / 1.5;
+
+    &:last-child { border-width: 0; }
+
+    .name { color: $body-color; }
 }
 
 .offcanvas-cart-body .no-items {
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: 50%;
-	margin: 0 1rem;
-    margin-top: -(($line-height*$font-size-base)/2);
+	margin: 2rem 1rem;
 	text-align: center;
+
+    .no-item-title, .no-item-icon { margin-bottom: 1rem; }
+
+    .no-item-title  { font-size: $font-size-h2; font-weight: 400; }
+    .no-item-icon   { color: rgba(0,0,0, 0.15); }
+    .no-item-info   { color: $text-muted; .fa { color: $body-color; } }
 }
 
 .offcanvas-cart-body .items .item {
@@ -200,17 +201,13 @@
 	}
 }
 
-#offcanvas-cart .summary {
+#offcanvas-cart .offcanvas-cart-summary {
     padding: 12px 20px;
 	background: #f5f5f5; 
 	border-top: 1px solid #c2c2c2;
 	border-bottom: 1px solid #d2d2d2; 
 	font-weight: bold; 
 	box-shadow: inset 0px 5px 20px -9px rgba(0,0,0, .25); 	
-}
-
-#offcanvas-cart .buttons {
-	padding: 20px 20px 12px 20px;
 }
 
 // checkout attributes
