--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Actions.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Actions.cshtml
@@ -34,7 +34,7 @@
 					   href="#"
 					   rel="nofollow"
 					   data-href='@Url.Action("AddProduct", "ShoppingCart", new { productId = Model.AddToCart.ProductId, shoppingCartTypeId = (int)ShoppingCartType.ShoppingCart })'
-					   data-form-selector="#product-details-form"
+					   data-form-selector="#pd-form"
 					   data-type="cart"
 					   data-action="add"
 					   data-toggle="offcanvas" data-target="#offcanvas-cart">
