--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
@@ -3,13 +3,24 @@
 @using SmartStore.Web.Models.Catalog;
 
 <div class="offcanvas-cart-body">
-    <div class="no-items text-muted @(Model.Items.Count > 0 ? "hidden-xs-up" : "")">
-        @T("Products.Compare.ListIsEmpty")
-    </div>
+	@if (Model.Items.Count == 0)
+	{
+		<div class="no-items">
+			<h4 class="no-item-title">
+				@T("ShoppingCart.Mini.EmptyCompare.Title")
+			</h4>
+			<p class="no-item-icon">
+				<i class="fa fa-retweet fa-4x"></i>
+			</p>
+			<p class="no-item-info text-muted">
+				@T("ShoppingCart.Mini.EmptyCompare.Info", "fa fa-lg fa-retweet")
+			</p>
+		</div>
+	}
 
-    @if (Model.Items.Count > 0)
-    {
-        <ul class="items list-unstyled">
+    @if (Model.Items.Count > 0) 
+	{
+		<ul class="items list-unstyled">
             @for (int i = 0, length = Model.Items.Count; i < length; i++)
             {
                 var item = Model.Items[i];
@@ -59,7 +70,7 @@
 
 @if (Model.Items.Count > 0)
 {
-    <div class="buttons clearfix">
+    <div class="offcanvas-cart-buttons clearfix">
         <a class="btn btn-primary pull-left" href="@Url.RouteUrl("CompareProducts")">
             @T("Products.Compare.List")
         </a>
