--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_cart.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_cart.scss
@@ -230,3 +230,12 @@
 .table-order-products .addtocart {
     text-align: center;
 }
+
+.table-order-products .productpicture img {
+	max-width: 70px;
+}
+.table-order-products .os-deliverytime .delivery-time {
+    vertical-align: top;
+    padding-left: 0.25rem;
+}
+    
