--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
@@ -70,7 +70,7 @@
 
 @if (Model.Items.Count > 0)
 {
-    <div class="offcanvas-cart-buttons clearfix">
+    <div class="offcanvas-cart-footer clearfix">
         <a class="btn btn-primary pull-left" href="@Url.RouteUrl("CompareProducts")">
             @T("Products.Compare.List")
         </a>
