--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -336,6 +336,19 @@ h4, h5, h6, .h4, .h5, .h6 {
 }
 
 
+// Data binding 3d rotate
+// ------------------------------------------------------
+@keyframes data-binding {
+    0%      { transform: rotateY(0deg); }
+    50%     { transform: rotateY(180deg); color: transparent; }
+    100%    { transform: rotateY(360deg); }
+}
+
+.data-binding {
+    animation: data-binding 0.5s ease-in-out;
+}
+
+
 //
 // Bootstrap 4 Alpha 1 fixes & surrogates (DELETE later!)
 // ------------------------------------------------------
