--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasShoppingCart.cshtml
@@ -1,9 +1,10 @@
 ﻿@model MiniShoppingCartModel
 
 @using SmartStore.Web.Models.ShoppingCart;
+
 @{
-    int descMaxLength = Model.ShowProductImages ? 120 : 140;
-    int attrMaxLength = Model.ShowProductImages ? 50 : 70;
+	int descMaxLength = Model.ShowProductImages ? 100 : 140;
+	int attrMaxLength = Model.ShowProductImages ? 50 : 70;
 }
 
 <div class="offcanvas-cart-body">
@@ -44,7 +45,7 @@
 					<div class="row">
 						@if (Model.ShowProductImages)
 						{
-							<div class="col-xs hidden-xs-down" style="max-width: 100px">
+							<div class="col-xs col-alpha">
 								@if (item.Picture.ImageUrl.HasValue())
 								{
 									<a class="img-center-container" href="@item.ProductUrl" title="@item.Picture.Title">
@@ -54,7 +55,7 @@
 							</div>
 						}
 
-						<div class="col-xs">
+						<div class="col-xs col-data">
 							<a class="name fw-600" href="@item.ProductUrl" title="@item.ProductName">@item.ProductName</a>
 							<div class="short-desc text-muted">
 								@Html.Raw(item.ShortDesc.Truncate(descMaxLength, "..."))
@@ -62,17 +63,14 @@
 
 							@if (item.AttributeInfo.HasValue())
 							{
-								<br />
-								<span class="attributes text-muted" title="@item.AttributeInfo">
-									@Html.Raw(item.AttributeInfo.Truncate(attrMaxLength, "..."))
-								</span>
+								<div class="attributes">
+									@Html.Raw(item.AttributeInfo)
+								</div>
 							}
 
 							@if (item.BundleItems.Count > 0)
 							{
-								<div class="clearfix"></div>
-
-								<div class="mb-bundle-pictures">
+								<div class="mb-bundle-pictures m-t-1">
 									@for (int j = 0, bundlelength = item.BundleItems.Count; j < bundlelength; j++)
 									{
 										var bundleItem = item.BundleItems[j];
@@ -91,178 +89,96 @@
 									}
 								</div>
 							}
+						</div>
+					</div>
 
-							<div class="toolbar m-t-1">
-								<span class="fs-h4 fw-600" style="line-height: 37px; display: inline-block; vertical-align: middle">
-									@item.UnitPrice
-								</span>
-								<a class="btn btn-danger btn-sm x-btn-icon remove ajax-cart-link pull-xs-right"
-								   href="#"
-								   rel="nofollow"
-								   data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id })'
-								   data-name="@item.ProductName"
-								   data-type="cart"
-								   data-action="remove"
-								   title='@T("Common.Remove")'>
-									<i class="fa fa-trash-o"></i>
-								</a>
-								<div class="pull-xs-right p-r-05 qty-input@(item.QuantityUnitName.HasValue() ? " has-postfix" : "")" style="display: inline-block; width: 6rem">
-									<input class="form-control form-control-sm input-sm" type="text" value="@item.EnteredQuantity"
-										   data-update-url="@(Url.Action("UpdateOcCartItem", "ShoppingCart"))" data-type="cart" data-sci-id="@item.Id"
-										   data-min="@item.MinOrderAmount" data-max="@item.MaxOrderAmount" data-postfix="@item.QuantityUnitName" data-step="@item.QuantityStep" />
-								</div>
+					<div class="row m-t-05">
+						<div class="col-xs col-alpha">
+							<div class="qty-input">
+								<input class="form-control form-control-sm input-sm" type="text" value="@item.EnteredQuantity"
+									   data-update-url="@(Url.Action("UpdateOcCartItem", "ShoppingCart"))" data-type="cart" data-sci-id="@item.Id"
+									   data-min="@item.MinOrderAmount" data-max="@item.MaxOrderAmount" data-step="@item.QuantityStep" />
 							</div>
 						</div>
-
-						<div class="col-xs-4 col-sm-3 hidden-xs-up text-xs-right">
-							<div><strong>@item.UnitPrice</strong></div>
+						<div class="col-xs">
+							<span class="price unit-price">
+								@item.UnitPrice
+							</span>
+						</div>
+						<div class="col-xs text-xs-right">
+							<a class="btn btn-secondary btn-sm btn-icon" title="In die Wunschliste verschieben">
+								<i class="fa fa-heart-o"></i>
+							</a>
+							<a class="btn btn-secondary btn-to-danger btn-sm btn-icon remove ajax-cart-link"
+							   href="#"
+							   rel="nofollow"
+							   data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id })'
+							   data-name="@item.ProductName"
+							   data-type="cart"
+							   data-action="remove"
+							   title='@T("Common.Remove")'>
+								<i class="fa fa-trash-o"></i>
+							</a>
 						</div>
 					</div>
 				</div>
 			}
 		</div>
-
-		<ul class="items list-unstyled hidden-xs-up">
-            @for (int i = 0, length = Model.Items.Count; i < length; i++)
-            {
-                var item = Model.Items[i];
-                string itemClass = "item clearfix";
-                if (!Model.ShowProductImages)
-                {
-                    itemClass += " no-thumb";
-                }
-                if (i == 0)
-                {
-                    itemClass += " alpha";
-                }
-                if (i == length - 1 && Model.IgnoredProductsCount == 0)
-                {
-                    itemClass += " omega";
-                }
-
-                <li class="@itemClass text-xs-center">
-
-                    @if (Model.ShowProductImages)
-                    {
-                        <figure class="picture pull-left pull-xs-none">
-							@if (item.Picture.ImageUrl.HasValue())
-                            {
-								<a href="@item.ProductUrl" title="@item.Picture.Title">
-									<img alt="@item.Picture.AlternateText" src="@item.Picture.ImageUrl" title="@item.Picture.Title" />
-                                </a>
-                            }
-                        </figure>
-                    }
-
-                    <div class="data pull-left text-xs-left">
-                        <a class="name" href="@item.ProductUrl" title="@item.ProductName">@item.ProductName</a>
-                        <p class="short-desc">
-                            @Html.Raw(item.ShortDesc.Truncate(descMaxLength, "..."))
-                        </p>
-                        @if (item.AttributeInfo.HasValue())
-                        {
-                            <br />
-                            <span class="attributes text-muted" title="@item.AttributeInfo">
-                                @Html.Raw(item.AttributeInfo.Truncate(attrMaxLength, "..."))
-                            </span>
-                        }
-                    </div>
-
-                    <div class="price pull-right text-nowrap">
-                        @item.UnitPrice
-                    </div>
-
-                    @if (item.BundleItems.Count > 0)
-                    {
-                        <div class="clearfix"></div>
-
-                        <div class="mb-bundle-pictures">
-                            @for (int j = 0, bundlelength = item.BundleItems.Count; j < bundlelength; j++)
-                            {
-                                var bundleItem = item.BundleItems[j];
-
-                                if (bundleItem.PictureUrl.HasValue())
-                                {
-									<a href="@bundleItem.ProductUrl" title="@bundleItem.ProductName">
-										<img alt="@bundleItem.ProductName" src="@bundleItem.PictureUrl" title="@bundleItem.ProductName" /></a>
-                                }
-
-                                if (bundlelength != (j + 1))
-                                {
-                                    <i class="fa fa-plus"></i>
-                                }
-                            }        
-                        </div>
-                    }
-
-                    <div class="toolbar">
-                        <div class="qty-input@(item.QuantityUnitName.HasValue() ? " has-postfix" : "")">
-                            <input class="form-control form-control-sm input-sm" type="text" value="@item.EnteredQuantity" 
-                                   data-update-url="@(Url.Action("UpdateOcCartItem", "ShoppingCart"))" data-type="cart" data-sci-id="@item.Id"
-                                   data-min="@item.MinOrderAmount" data-max="@item.MaxOrderAmount" data-postfix="@item.QuantityUnitName" data-step="@item.QuantityStep" />
-                        </div>
-                        
-                        <a class="btn btn-danger btn-sm btn-icon remove ajax-cart-link"
-                           href="#"
-                           rel="nofollow"
-                           data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id })'
-                           data-name="@item.ProductName"
-                           data-type="cart"
-                           data-action="remove"
-                           title='@T("Common.Remove")'>
-                            <i class="fa fa-trash-o"></i>
-                        </a>
-                    </div>
-                </li>
-            }
-            @if (Model.IgnoredProductsCount > 0)
-            {
-                string resId = "ShoppingCart.Mini.More.{0}".FormatInvariant(Model.IgnoredProductsCount == 1 ? "Singular" : "Plural");
-                <li class="item more omega">
-                    <a class="name" href="@Url.RouteUrl("ShoppingCart")">
-                        @(T(resId).ToString().FormatInvariant(Model.IgnoredProductsCount))...
-                    </a>
-                </li>
-            }
-        </ul>
 	}
 	@{ Html.RenderWidget("mini_shopping_cart_bottom"); }
 </div>
 
-@if (Model.TotalProducts > 0)
+@if (Model.TotalProducts == 0)
 {
-	<div class="offcanvas-cart-summary">
-		<div class="pull-left">
-			@T("ShoppingCart.Totals.SubTotal"):
-		</div>
-		<div class="price sub-total pull-right">
-			@Model.SubTotal
-		</div>
-	</div>
+	return;
 }
 
-<div class="offcanvas-cart-buttons">
-    @if (Model.DisplayShoppingCartButton)
-            {
-        <a class="btn btn-primary pull-left" href="@Url.RouteUrl("ShoppingCart")">
-            @T("ShoppingCart.Mini.ViewCart")
-            <i class="fa fa-shopping-cart" style="display: none"></i>
-        </a>
-    }
-    @if (Model.DisplayCheckoutButton)
-    {
-        var checkoutUrl = "";
-        if (Model.AnonymousCheckoutAllowed && Model.CurrentCustomerIsGuest)
-        {
-            checkoutUrl = Url.Action("Login", "Customer", new { checkoutAsGuest = true, returnUrl = Url.RouteUrl("ShoppingCart") });
-        }
-        else
-        {
-            checkoutUrl = Url.RouteUrl("Checkout");
-        }
-        <a class="btn btn-warning pull-right" href="@checkoutUrl">
-			<span>@T("Checkout.Button")</span>
-            <i class="fa fa-caret-right"></i>
-        </a>
-    }
+<div class="offcanvas-cart-footer">
+	<div class="offcanvas-cart-footer-row">
+		<div class="offcanvas-cart-footer-col m-r-05">
+			<div>
+				<div class="sub-total-caption">
+					@T("ShoppingCart.Totals.SubTotal"):
+				</div>
+				<div class="sub-total price">
+					@Model.SubTotal
+				</div>
+			</div>
+		</div>
+		<div class="offcanvas-cart-footer-col text-xs-right">
+			@if (Model.DisplayShoppingCartButton)
+			{
+				if (Model.DisplayCheckoutButton)
+				{
+					<a class="btn btn-success btn-flat btn-flat-light btn-action" href="@Url.RouteUrl("ShoppingCart")">
+						@T("ShoppingCart.Mini.ViewCart")
+					</a>
+				}
+				else
+				{
+					<a class="btn btn-clear btn-action" href="@Url.RouteUrl("ShoppingCart")">
+						<i class="fa fa-check"></i>
+						<span>@T("ShoppingCart.Mini.ViewCart")</span>
+					</a>
+				}
+			}
+
+			@if (Model.DisplayCheckoutButton)
+			{
+				var checkoutUrl = "";
+				if (Model.AnonymousCheckoutAllowed && Model.CurrentCustomerIsGuest)
+				{
+					checkoutUrl = Url.Action("Login", "Customer", new { checkoutAsGuest = true, returnUrl = Url.RouteUrl("ShoppingCart") });
+				}
+				else
+				{
+					checkoutUrl = Url.RouteUrl("Checkout");
+				}
+				<a class="btn btn-clear btn-action" href="@checkoutUrl">
+					<i class="fa fa-check"></i>
+					<span>@T("Checkout.Button")</span>
+				</a>
+			}
+		</div>
+	</div>
 </div>
