--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
@@ -130,7 +130,7 @@
 
 @if (Model.Items.Count > 0)
 {
-    <div class="offcanvas-cart-buttons clearfix">
+    <div class="offcanvas-cart-footer clearfix">
         <a class="btn btn-primary pull-left" href="@Url.RouteUrl("Wishlist")">
             @T("Wishlist.Mini.ViewWishlist")
         </a>
