--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
@@ -3,79 +3,81 @@
 @using SmartStore.Web.Models.Catalog;
 
 <div class="offcanvas-cart-body">
-	@if (Model.Items.Count == 0)
-	{
-		<div class="no-items">
-			<h4 class="no-item-title">
-				@T("ShoppingCart.Mini.EmptyCompare.Title")
-			</h4>
-			<p class="no-item-icon">
-				<i class="fa fa-retweet fa-4x"></i>
-			</p>
-			<p class="no-item-info text-muted">
-				@T("ShoppingCart.Mini.EmptyCompare.Info", "fa fa-lg fa-retweet")
-			</p>
-		</div>
-	}
+    @if (Model.Items.Count == 0)
+    {
+        <div class="no-items">
+            <h4 class="no-item-title">
+                @T("ShoppingCart.Mini.EmptyCompare.Title")
+            </h4>
+            <p class="no-item-icon">
+                <i class="fa fa-retweet fa-4x"></i>
+            </p>
+            <p class="no-item-info text-muted">
+                @T("ShoppingCart.Mini.EmptyCompare.Info", "fa fa-lg fa-retweet")
+            </p>
+        </div>
+    }
 
-    @if (Model.Items.Count > 0) 
-	{
-		<ul class="items list-unstyled">
-            @for (int i = 0, length = Model.Items.Count; i < length; i++)
+    @if (Model.Items.Count > 0)
+    {
+        <div class="offcanvas-cart-items">
+            @foreach (var item in Model.Items)
             {
-                var item = Model.Items[i];
-                string itemClass = "item clearfix";
-                if (i == 0)
-                {
-                    itemClass += " alpha";
-                }
-                
-                <li class="@itemClass text-xs-center">
-                    <figure class="picture pull-left pull-xs-none">
-						@if (item.Picture != null && item.Picture.ImageUrl.HasValue())
-						{
-							<a href="@Url.RouteUrl("Product", new { SeName = item.SeName })" title="@item.Picture.Title">
-								<img alt="@item.Picture.AlternateText" src="@item.Picture.ImageUrl" title="@item.Picture.Title" />
-							</a>
-						}
-                    </figure>
+                <div class="offcanvas-cart-item">
+                    <div class="row">
+                        <div class="col-xs col-alpha">
+                            @if (item.Picture.ImageUrl.HasValue())
+                            {
+                                <a class="img-center-container" href="@Url.RouteUrl("Product", new { SeName = item.SeName })" title="@item.Picture.Title">
+                                    <img alt="@item.Picture.AlternateText" src="@item.Picture.ImageUrl" title="@item.Picture.Title" />
+                                </a>
+                            }
+                        </div>
 
-                    <div class="data pull-left text-xs-left">
-                        <a class="name" href="@Url.RouteUrl("Product", new { SeName = item.SeName })" title="@item.Name">@item.Name</a>
-                        <p class="short-desc">
-                            @Html.Raw(item.ShortDescription.Truncate(140, "..."))
-                        </p>
+                        <div class="col-xs col-data">
+                            <a class="name fw-600" href="@Url.RouteUrl("Product", new { SeName = item.SeName })" title="@item.Name">@item.Name</a>
+                            <div class="short-desc text-muted">
+                                @Html.Raw(item.ShortDescription.Truncate(120, "..."))
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="price pull-right text-nowrap">
-                        @item.Price.Price
-                    </div>
+                    <div class="row m-t-05">
+                        <div class="col-xs col-alpha"></div>
+                        <div class="col-xs">
+                            <span class="price unit-price">
+                                @item.Price.Price
+                            </span>
+                        </div>
 
-                    <div class="toolbar">
-                        <a class="btn btn-danger btn-sm btn-icon remove ajax-cart-link"
-                           href="#"
-                           rel="nofollow"
-                           data-href='@Url.Action("RemoveProductFromCompare", "Catalog", new { id = item.Id })'
-                           data-type="compare"
-                           data-action="remove"
-                           title='@T("Common.Remove")'>
-                            <i class="fa fa-trash-o"></i>
-                        </a>
+                        <div class="col-xs text-xs-right">
+                            <a class="btn btn-secondary btn-to-danger btn-sm btn-icon remove ajax-cart-link"
+                               href="#"
+                               rel="nofollow"
+                               data-href='@Url.Action("RemoveProductFromCompare", "Catalog", new { id = item.Id })'
+                               data-type="compare"
+                               data-action="remove"
+                               title='@T("Common.Remove")'>
+                                <i class="fa fa-trash-o"></i>
+                            </a>
+                        </div>
                     </div>
-                </li>
+                </div>
             }
-        </ul>
+        </div>
     }
 </div>
 
 @if (Model.Items.Count > 0)
 {
-    <div class="offcanvas-cart-footer clearfix">
-        <a class="btn btn-primary pull-left" href="@Url.RouteUrl("CompareProducts")">
-            @T("Products.Compare.List")
+    <div class="offcanvas-cart-footer">
+        <a class="btn btn-clear btn-action pull-left" href="@Url.RouteUrl("CompareProducts")">
+            <i class="fa fa-retweet"></i>
+            <span>@T("Products.Compare.List")</span>
         </a>
-        <a class="btn btn-warning pull-right" href="@Url.Action("ClearCompareList")" rel="nofollow">
-            @T("Products.Compare.Clear")
+        <a class="btn btn-clear btn-action pull-right ajax-cart-link" href="#" data-href="@Url.Action("ClearCompareList")" rel="nofollow" data-type="compare" data-action="remove">
+            <i class="fa fa-trash"></i>
+            <span>@T("Products.Compare.Clear")</span>
         </a>
     </div>
 }
