--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
@@ -35,96 +35,116 @@
 				</button>
 				@Html.Raw(T("ShoppingCart.Mini.AddedItemToWishlist", "<strong>" + currentItem.ProductName.Truncate(50, "...") + "</strong>").Text)
 			</div>
-		}
+        }
 
-		<ul class="items list-unstyled">
-            @for (int i = 0, length = Model.Items.Count; i < length; i++)
+        <div class="offcanvas-cart-items">
+			@foreach (var item in Model.Items)
             {
-                var item = Model.Items[i];
-                string itemClass = "item clearfix";
-                if (!Model.ShowProductImages)
-                {
-                    itemClass += " no-thumb";
-                }
-                if (i == 0)
-                {
-                    itemClass += " alpha";
-                }
+                <div class="offcanvas-cart-item">
+                    <div class="row">
+                        @if (Model.ShowProductImages)
+                        {
+                            <div class="col-xs col-alpha">
+                                @if (item.Picture.ImageUrl.HasValue())
+                                {
+                                    <a class="img-center-container" href="@item.ProductUrl" title="@item.Picture.Title">
+                                        <img alt="@item.Picture.AlternateText" src="@item.Picture.ImageUrl" title="@item.Picture.Title" />
+                                    </a>
+                                }
+                            </div>
+                        }
 
-            <li class="@itemClass card text-xs-center">
-                @if (Model.ShowProductImages)
-                {
-                    <figure class="picture pull-left pull-xs-none">
-                        @if (item.Picture.ImageUrl.HasValue())
-						{
-                            <a href="@item.ProductUrl" title="@item.Picture.Title">
-                                <img alt="@item.Picture.AlternateText" src="@item.Picture.ImageUrl" title="@item.Picture.Title" />
-                            </a>
-						}
-                    </figure>
-                }
+                        <div class="col-xs col-data">
+                            <a class="name fw-600" href="@item.ProductUrl" title="@item.ProductName">@item.ProductName</a>
+                            <div class="short-desc text-muted">
+                                @Html.Raw(item.ShortDesc.Truncate(descMaxLength, "..."))
+                            </div>
 
-                <div class="data pull-left text-xs-left">
-                    <a class="name" href="@item.ProductUrl" title="@item.ProductName">@item.ProductName</a>
-                    <p class="short-desc">
-                        @Html.Raw(item.ShortDesc.Truncate(descMaxLength, "..."))
-                    </p>
-                    @if (item.AttributeInfo.HasValue())
-                    {
-                        <br />
-                        <span class="attributes text-muted" title="@item.AttributeInfo">
-                            @Html.Raw(item.AttributeInfo.Truncate(attrMaxLength, "..."))
-                        </span>
-                    }
-                </div>
+                            @if (item.AttributeInfo.HasValue())
+                            {
+                                <div class="attributes">
+                                    @Html.Raw(item.AttributeInfo)
+                                </div>
+                            }
 
-                <div class="price pull-right">
-                    @item.UnitPrice
-                </div>
+                            @*@if (item.BundleItem..Count > 0)
+                            {
+                                <div class="mb-bundle-pictures m-t-1">
+                                    @for (int j = 0, bundlelength = item.BundleItems.Count; j < bundlelength; j++)
+                                    {
+                                        var bundleItem = item.BundleItems[j];
 
-                <div class="toolbar">
-                    <div class="qty-input@(item.QuantityUnitName.HasValue() ? " has-postfix" : "")">
-                        <input class="form-control form-control-sm input-sm" type="text" value="@item.EnteredQuantity"
-                               data-update-url="@(Url.Action("UpdateOcCartItem", "ShoppingCart"))" data-type="wishlist" data-sci-id="@item.Id" 
-                               data-min="@item.MinOrderAmount" data-max="@item.MaxOrderAmount" data-postfix="@item.QuantityUnitName" data-step="@item.QuantityStep"  />
+                                        if (bundleItem.PictureUrl.HasValue())
+                                        {
+                                            <a href="@bundleItem.ProductUrl" title="@bundleItem.ProductName">
+                                                <img alt="@bundleItem.ProductName" src="@bundleItem.PictureUrl" title="@bundleItem.ProductName" />
+                                            </a>
+                                        }
+
+                                        if (bundlelength != (j + 1))
+                                        {
+                                            <i class="fa fa-plus"></i>
+                                        }
+                                    }
+                                </div>
+                            }*@
+                        </div>
                     </div>
 
-                    @if (Model.ShowItemsFromWishlistToCartButton)
-                    {
-                        <a class="btn btn-secondary btn-sm btn-icon ajax-cart-link" title='@T("ShoppingCart.AddToCart")'
-                            href="#"
-                            rel="nofollow"
-                            data-href="@Url.Action("AddOneItemtoCartFromWishlist", "ShoppingCart", new { cartItemId = item.Id })"
-                            data-name="@item.ProductName"
-                            data-type="cart"
-                            data-action="addfromwishlist">
-                            <i class="fa fa-cart-arrow-down"></i>
-                        </a>
-                    }
+                    <div class="row m-t-05">
+                        <div class="col-xs col-alpha">
+                            <div class="qty-input">
+                                <input class="form-control form-control-sm input-sm" type="text" value="@item.EnteredQuantity"
+                                        data-update-url="@(Url.Action("UpdateOcCartItem", "ShoppingCart"))" data-type="wishlist" data-sci-id="@item.Id"
+                                        data-min="@item.MinOrderAmount" data-max="@item.MaxOrderAmount" data-step="@item.QuantityStep" />
+                            </div>
+                        </div>
+                        <div class="col-xs">
+                            <span class="price unit-price">
+                                @item.UnitPrice
+                            </span>
+                        </div>
 
-                    <a class="btn btn-danger btn-sm btn-icon remove ajax-cart-link"
-                       href="#"
-                       rel="nofollow"
-                       data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id, wishlistItem = true })'
-                       data-name="@item.ProductName"
-                       data-type="wishlist"
-                       data-action="remove"
-                       title='@T("Common.Remove")'>
-                        <i class="fa fa-trash-o"></i>
-                    </a>
+                        <div class="col-xs text-xs-right">
+
+                            @if (Model.ShowItemsFromWishlistToCartButton)
+                            {
+                                <a class="btn btn-secondary btn-sm btn-icon ajax-cart-link" title='@T("ShoppingCart.AddToCart")'
+                                    href="#"
+                                    rel="nofollow"
+                                    data-href="@Url.Action("AddOneItemtoCartFromWishlist", "ShoppingCart", new { cartItemId = item.Id })"
+                                    data-name="@item.ProductName"
+                                    data-type="cart"
+                                    data-action="addfromwishlist">
+                                    <i class="fa fa-cart-arrow-down"></i>
+                                </a>
+                            }
+
+                            <a class="btn btn-secondary btn-to-danger btn-sm btn-icon remove ajax-cart-link"
+                                href="#"
+                                rel="nofollow"
+                                data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id, wishlistItem = true })'
+                                data-name="@item.ProductName"
+                                data-type="wishlist"
+                                data-action="remove"
+                                title='@T("Common.Remove")'>
+                                <i class="fa fa-trash-o"></i>
+                            </a>
+                        </div>
+
+                    </div>
                 </div>
-            </li>
-
             }
-        </ul>
+        </div>
     }
 </div>
 
 @if (Model.Items.Count > 0)
 {
-    <div class="offcanvas-cart-footer clearfix">
-        <a class="btn btn-primary pull-left" href="@Url.RouteUrl("Wishlist")">
-            @T("Wishlist.Mini.ViewWishlist")
+    <div class="offcanvas-cart-footer text-xs-right">
+        <a class="btn btn-clear btn-action" href="@Url.RouteUrl("Wishlist")">
+            <i class="fa fa-heart"></i>
+            <span>@T("Wishlist.Mini.ViewWishlist")</span>
         </a>
     </div>
 }
