--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasShoppingCart.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MiniShoppingCartModel
-
 @using SmartStore.Web.Models.ShoppingCart;
+@using SmartStore.Core.Domain.Orders;
 
 @{
 	int descMaxLength = Model.ShowProductImages ? 100 : 140;
@@ -107,9 +107,17 @@
 						</div>
 
 						<div class="col-xs text-xs-right">
-							<a class="btn btn-secondary btn-sm btn-icon" title="In die Wunschliste verschieben">
-								<i class="fa fa-heart-o"></i>
-							</a>
+
+                            <a class="btn btn-secondary btn-sm btn-icon ajax-cart-link" title='@T("ShoppingCart.AddToWishlist")'
+                                href="#"
+                                rel="nofollow"
+                                data-href="@Url.Action("MoveItemBetweenCartAndWishlist", "ShoppingCart", new { cartItemId = item.Id, cartType = ShoppingCartType.ShoppingCart })"
+                                data-name="@item.ProductName"
+                                data-type="cart"
+                                data-action="addfromwishlist">
+                                <i class="fa fa-heart-o"></i>
+                            </a>
+                            
 							<a class="btn btn-secondary btn-to-danger btn-sm btn-icon remove ajax-cart-link"
 							   href="#"
 							   rel="nofollow"
