Used new quantity control for OffCanvasCart

--- a/src/Presentation/SmartStore.Web/Views/Shared/EditorTemplates/QtyInput.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/EditorTemplates/QtyInput.cshtml
@@ -9,18 +9,25 @@
     var inputStyle = "spinner";
     //var inputStyle = Model.QuantiyControlType;
 
-    var attrs = new RouteValueDictionary(ViewData["htmlAttributes"] ?? new object());
-    attrs["class"] = "form-control" + (large ? " form-control-lg" : "");
-    attrs["data-min"] = Model.MinOrderAmount;
-    attrs["data-max"] = Model.MaxOrderAmount;
-    attrs["data-postfix"] = Model.QuantityUnitName;
-    attrs["data-step"] = Model.QuantityStep;
+    var htmlAttributes = new RouteValueDictionary(ViewData["htmlAttributes"] ?? new object());
+    var fixedAttributes = new RouteValueDictionary();
+
+    foreach (var attr in htmlAttributes)
+    {
+        fixedAttributes[attr.Key.StartsWith("data_") ? attr.Key.Replace("_", "-") : attr.Key] = attr.Value;
+    }
+
+    fixedAttributes["class"] = "form-control" + (large ? " form-control-lg" : "");
+    fixedAttributes["data-min"] = Model.MinOrderAmount;
+    fixedAttributes["data-max"] = Model.MaxOrderAmount;
+    fixedAttributes["data-postfix"] = Model.QuantityUnitName;
+    fixedAttributes["data-step"] = Model.QuantityStep;
 }
 
 <div class="qty-input@(Model.QuantityUnitName.HasValue() ? " has-postfix" : "")">
 	@if (inputStyle == "spinner")
     {
-        @Html.TextBoxFor(model => model.EnteredQuantity, attrs)
+        @Html.TextBoxFor(model => model.EnteredQuantity, fixedAttributes)
     }
     else
     {
