--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
@@ -94,11 +94,8 @@
 
                     <div class="row m-t-05">
                         <div class="col-xs col-alpha">
-                            <div class="qty-input">
-                                <input class="form-control form-control-sm input-sm" type="text" value="@item.EnteredQuantity"
-                                        data-update-url="@(Url.Action("UpdateOcCartItem", "ShoppingCart"))" data-type="wishlist" data-sci-id="@item.Id"
-                                        data-min="@item.MinOrderAmount" data-max="@item.MaxOrderAmount" data-step="@item.QuantityStep" />
-                            </div>
+                            @Html.EditorFor(x => item, "QtyInput",
+                                new { htmlAttributes = new { data_update_url = Url.Action("UpdateOcCartItem", "ShoppingCart"), data_type = "wishlist", data_sci_id = item.Id } })
                         </div>
                         <div class="col-xs">
                             <span class="price unit-price">
@@ -144,7 +141,7 @@
 {
     <div class="offcanvas-cart-footer text-xs-right">
         <a class="btn btn-clear btn-action" href="@Url.RouteUrl("Wishlist")">
-            <i class="fa fa-heart"></i>
+            <i class="fa fa-check"></i>
             <span>@T("Wishlist.Mini.ViewWishlist")</span>
         </a>
     </div>
