--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
@@ -39,27 +39,26 @@
                             <div class="short-desc text-muted">
                                 @Html.Raw(item.ShortDescription.Truncate(120, "..."))
                             </div>
-                        </div>
-                    </div>
 
-                    <div class="row m-t-05">
-                        <div class="col-xs col-alpha"></div>
-                        <div class="col-xs">
-                            <span class="price unit-price">
-                                @item.Price.Price
-                            </span>
-                        </div>
+                            <div class="row m-t-05">
+                                <div class="col-xs">
+                                    <span class="price unit-price">
+                                        @item.Price.Price
+                                    </span>
+                                </div>
 
-                        <div class="col-xs text-xs-right">
-                            <a class="btn btn-secondary btn-to-danger btn-sm btn-icon remove ajax-cart-link"
-                               href="#"
-                               rel="nofollow"
-                               data-href='@Url.Action("RemoveProductFromCompare", "Catalog", new { id = item.Id })'
-                               data-type="compare"
-                               data-action="remove"
-                               title='@T("Common.Remove")'>
-                                <i class="fa fa-trash-o"></i>
-                            </a>
+                                <div class="col-xs text-xs-right">
+                                    <a class="btn btn-secondary btn-to-danger btn-sm btn-icon remove ajax-cart-link"
+                                       href="#"
+                                       rel="nofollow"
+                                       data-href='@Url.Action("RemoveProductFromCompare", "Catalog", new { id = item.Id })'
+                                       data-type="compare"
+                                       data-action="remove"
+                                       title='@T("Common.Remove")'>
+                                        <i class="fa fa-trash-o"></i>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -72,7 +71,7 @@
 {
     <div class="offcanvas-cart-footer">
         <a class="btn btn-clear btn-action pull-left" href="@Url.RouteUrl("CompareProducts")">
-            <i class="fa fa-retweet"></i>
+            <i class="fa fa-check"></i>
             <span>@T("Products.Compare.List")</span>
         </a>
         <a class="btn btn-clear btn-action pull-right ajax-cart-link" href="#" data-href="@Url.Action("ClearCompareList")" rel="nofollow" data-type="compare" data-action="remove">
